k8/shiny-farkle-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shiny-farkle-service
  labels:
    app: shiny-farkle
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3838
  selector:
    app: shiny-farkle
